# serde-sgx

./: .drone.yml  README.md
serde/: Cargo.toml
serde/src/: lib.rs
serde/src/de/: ignored_any.rs  impls.rs  mod.rs  value.rs
serde/src/private/: de.rs  ser.rs
serde/src/ser/: impls.rs  mod.rs
serde_derive/: Cargo.toml
serde_test/: Cargo.toml
serde_test/src/: configure.rs  de.rs  lib.rs  ser.rs
sgx/serde-sgx-test/app/: Cargo.toml
sgx/serde-sgx-test/enclave/: Cargo.toml
sgx/serde-sgx-test/enclave/src/: lib.rs
