[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
#serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", features = ["rc", "unstable"] }
#serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx.git" }
#serde_test = { git = "https://github.com/mesalock-linux/serde-sgx.git" }
fnv = { git = "https://github.com/mesalock-linux/rust-fnv-sgx.git" }
serde = { path = "../../../serde", features = ["rc", "unstable"] }
serde_derive = { path = "../../../serde_derive" }
serde_test = { path = "../../../serde_test" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tunittest = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
